lab3/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app  
  ports:
  - protocol: TCP
    port: 80  
    targetPort: 3000  #
  type: LoadBalancer
