lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  tls:
  - hosts:
    - localhost
    secretName: my-tls-secret 
  rules:
  - host: localhost  
    http:
      paths:
      - path: /        
        pathType: Prefix
        backend:
          service:
            name: my-app-service 
            port:
              number: 80
